RESOLVED FIXED118323
EGL compile error for non-X11 platforms
https://bugs.webkit.org/show_bug.cgi?id=118323
Summary EGL compile error for non-X11 platforms
Alex Christensen
Reported 2013-07-02 13:43:50 PDT
Compiling GLContextEGL.cpp on non-X11 platforms currently fails. The function GLContextEGL::createPixmapContext declares a variable named "context" inside #if PLATFORM(X11) and uses it outside of the macro protection.
Attachments
Patch (1.47 KB, patch)
2013-07-02 13:45 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2013-07-02 13:45:45 PDT
Brent Fulgham
Comment 2 2013-07-02 14:24:08 PDT
Comment on attachment 205942 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-07-02 14:59:33 PDT
Comment on attachment 205942 [details] Patch Clearing flags on attachment: 205942 Committed r152323: <http://trac.webkit.org/changeset/152323>
WebKit Commit Bot
Comment 4 2013-07-02 14:59:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.