Fixed compile error in non-X11 platforms using EGL. https://bugs.webkit.org/show_bug.cgi?id=118323

Reviewed by Brent Fulgham.

* platform/graphics/egl/GLContextEGL.cpp:
(WebCore::GLContextEGL::createPixmapContext): Put all X11-specific code into #if PLATFORM(X11).


Canonical link: https://commits.webkit.org/136337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152323 268f45cc-cd09-0410-ab3c-d52691b4dbfc